--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,6 @@
   /* Sizes */
   --nav-height: 7vh;
   --primer-side-width: 40vh;
+  --default-font-size: 20px;
+  --logo-font-size: 4vh;
 }
